review comment, use project checkstyle.xml instead of google java format